fix align menu header

--- a/src/web_modules/about/_style.scss
+++ b/src/web_modules/about/_style.scss
@@ -226,6 +226,18 @@
   text-align: center;
 }
 
+.css-typing {
+    width: 30em;
+    white-space:nowrap;
+    overflow:hidden;
+    -webkit-animation: type 5s steps(50, end);
+    animation: type 5s steps(50, end);
+}
+
+@keyframes type {
+    from { width: 0; }
+}
+
 
 
 
